saving progress, added LB and modified broker for groups

--- a/StarterCode_PA1/README
+++ b/StarterCode_PA1/README
@@ -158,6 +158,13 @@ python3 BrokerAppln.py -n broker2 -p 6001 --addr localhost -z localhost:2181
 python3 BrokerAppln.py -n broker3 -p 6002 --addr localhost -z localhost:2181
 
 
+python3 BrokerAppln.py -n broker4 -p 6003 --addr localhost -z localhost:2181
+
+python3 BrokerAppln.py -n broker5 -p 6004 --addr localhost -z localhost:2181
+
+python3 BrokerAppln.py -n broker6 -p 6005 --addr localhost -z localhost:2181
+
+
 Run the subscriber：
 (vm7)
 python3 SubscriberAppln.py -n sub1 -z localhost:2181 -T 9 -l 20
